catkin_ws/logs/backend/build.make.368.log.stderr
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:7:0:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h: In constructor ‘SLAM::Frame::Frame(boost::shared_ptr<cv::Mat>&, boost::shared_ptr<cv::Mat>&, boost::shared_ptr<cv::Mat>&, boost::shared_ptr<double>&)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:240:26: warning: ‘SLAM::Frame::newNodeFlag’ will be initialized after [-Wreorder]
  boost::shared_ptr<bool> newNodeFlag;
                          ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:238:26: warning:   ‘boost::shared_ptr<bool> SLAM::Frame::keyFrameFlag’ [-Wreorder]
  boost::shared_ptr<bool> keyFrameFlag;
                          ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:17:1: warning:   when initialized here [-Wreorder]
 Frame::Frame(boost::shared_ptr<cv::Mat>& rgbImage, boost::shared_ptr<cv::Mat>& grayImage, boost::shared_ptr<cv::Mat>& depthImage, boost::shared_ptr<double>& timeStamp)
 ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp: In member function ‘void SLAM::Frame::setKeypoints(boost::shared_ptr<std::vector<cv::KeyPoint> >)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:46:32: warning: for increment expression has no effect [-Wunused-value]
    for (int nx = -NEIGHBOR; nx < NEIGHBOR; n ++)
                                ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:9:20: error: expected ‘)’ before ‘;’ token
 #define NEIGHBOR 10;
                    ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:46:34: note: in expansion of macro ‘NEIGHBOR’
    for (int nx = -NEIGHBOR; nx < NEIGHBOR; n ++)
                                  ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:46:44: error: ‘n’ was not declared in this scope
    for (int nx = -NEIGHBOR; nx < NEIGHBOR; n ++)
                                            ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:46:48: error: expected ‘;’ before ‘)’ token
    for (int nx = -NEIGHBOR; nx < NEIGHBOR; n ++)
                                                ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:47:30: error: ‘nx’ was not declared in this scope
     for (int nx = -NEIGHBOR; nx < NEIGHBOR; n ++)
                              ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:47:49: error: expected ‘;’ before ‘)’ token
     for (int nx = -NEIGHBOR; nx < NEIGHBOR; n ++)
                                                 ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:41:12: warning: unused variable ‘depthSum’ [-Wunused-variable]
   uint16_t depthSum = 0; 
            ^
make[2]: *** [CMakeFiles/frontend.dir/src/Frame.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
